manifests/storage/resources/networkpolicies.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: storage
  namespace: storage
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: local-path-provisioner
  egress:
  # Kubernetes API
  - toEntities:
    - kube-apiserver
  # DNS
  - toPorts:
    - ports:
      - port: "53"
        protocol: ANY
    toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": kube-system
        k8s-app: kube-dns
